-Finishes up LogMgr, -Begins with Buffer/BufferManager