@@ -14,6 +14,15 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
+tasks.compileJava{
+    options.compilerArgs.add(("--enable-preview"))
+}
+tasks.compileTestJava{
+    options.compilerArgs.add(("--enable-preview"))
+}
 tasks.test {
     useJUnitPlatform()
+
+//    jvmArgs?.forEach(System.out::println)
+    jvmArgs?.add("--enable-preview")
 }
